# Distributed-Ecommerce-Tracker

./: .dist.env  .gitignore  README.md  compose.yaml  pyproject.toml
scripts/: format.sh  lint.sh
src/: alembic.ini  settings.py
src/database/: env.py
src/items/: __init__.py  detail_product_page.py  product_items.py
src/middlewares/: __init__.py  http_proxy_middleware.py  retry_blocked_middleware.py
src/rmq/extensions/: rpc_task_consumer.py
src/spiders/: quill_category_spider.py  quill_product_spider.py
