[tool.poetry]
name = "scrapy-boilerplate-v2"
version = "2.0.0"
description = "Scrapy project done right"
authors = ["GroupBWT <developers@groupbwt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "2.12.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
mysqlclient = "^2.2.6"
furl = "^2.1.3"
pydantic = "^2.10.3"
pika = "^1.3.2"
pendulum = "^3.0.0"
python-dotenv = "^1.0.1"
scrapy-impersonate = "^1.6"
apscheduler = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.6"
black = "^23.11.0"
pytest = "^7.4.3"


[tool.ruff]
src = ["src"]
select = ["C", "E", "W", "F", "I"]
line-length = 120
extend-exclude = ["rmq"]

[tool.ruff.lint]
ignore = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["rmq"]

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "furl.*",
    "pika.*",
    "MySQLdb.*",
]
ignore_missing_imports = true

